[package]
name = "codereport"
version = "0.1.0"
edition = "2021"
description = "Track code follow-ups (TODOs, refactors, bugs, critical) with tags, expiration, and CI checks."
license = "MIT"
repository = "https://github.com/Pulko/codereport"
readme = "README.md"
keywords = ["cli", "todo", "tech-debt", "code-reports", "ci"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
git2 = "0.20.4"
open = "5.3.3"
